# a3s

./: .gitignore  .gitmodules  A3sfile.hcl  AGENTS.md  CLAUDE.md  CUSTOM_SKILLS_AGENTS_TEST.md  Cargo.toml  DESIGN.md  DOC_FIX_PLAN.md  LIBKRUN_PUSH_SUMMARY.md  MULTICORE_UTILIZATION_ANALYSIS.md  OLLAMA_API_GAPS.md  P0_PLAN.md  PARALLEL_OPTIMIZATION_FINAL_REPORT.md  PARALLEL_OPTIMIZATION_QA.md  PARALLEL_OPTIMIZATION_WORK_SUMMARY.md  PARALLEL_PROCESSING_RESULTS.md  PARALLEL_PROCESSING_TEST.md  PHASE2_OPTIMIZATION_REPORT.md  PHASE2_TEST_RESULTS.md  PHASE3_OPTIMIZATION_REPORT.md  PHASE3_TEST_RESULTS.md  PHASE4_SUMMARY.md  PHASE5.1_SUMMARY.md  PHASE5_OPTIMIZATION_REPORT.md  PHASE5_SUMMARY.md  PHASE5_TEST_RESULTS.md  PHASE_ROLLBACK.md  README.md  SCALABILITY_TEST_RESULTS.md  SDK_README_CONSOLIDATION_SUMMARY.md  SESSION_INTERNAL_PARALLEL_ANALYSIS.md  SESSION_PARALLEL_OPTIMIZATION.md  SESSION_PARALLEL_OPTIMIZATION_SUMMARY.md  TASK_PRIORITY_TEST_SUMMARY.md  install.ps1  install.sh  justfile  plan-dev-tool.md  plan.md  (+1 more)
apps/os/api/: Cargo.toml
apps/os/api/crates/lambda-core/: Cargo.toml  README.md
apps/os/api/src/lambda/: Cargo.toml  client.rs  config.rs  executor_main.rs  lib.rs  main.rs  observability.rs  pool.rs  queue.rs  server.rs  worker.rs
apps/os/api/src/lambda_cli/: Cargo.toml  cli.rs  errors.rs  main.rs
apps/safeclaw/crates/safeclaw/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  justfile
apps/safeclaw/crates/safeclaw/docs/: api-spec.md  sentinel-multi-agent-design.md  tee-real-communication-design.md  threat-model.md
apps/safeclaw/crates/safeclaw/skills/: a3s-box.md
apps/safeclaw/crates/safeclaw/src/: api.rs  bootstrap.rs  config.rs  error.rs  hardening.rs  lib.rs  main.rs  skills.rs
apps/safeclaw/crates/safeclaw/tests/: test_safeclaw_permissions.rs
apps/safeclaw/src-tauri/: Cargo.toml  tauri.conf.json
apps/safeclaw/src-tauri/.cargo/: config.toml
apps/safeclaw/src-tauri/capabilities/: default.json
apps/safeclaw/src-tauri/icons/: icon.icns
apps/safeclaw/src-tauri/skills/: a3s-box.md  super-admin.md
apps/safeclaw/src-tauri/src/: browser.rs  lib.rs  main.rs  power.rs  server.rs
apps/safeclaw/src-tauri/src/voice/: mod.rs  tts.rs  tts_model.rs
apps/studio/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/icons/: icon.icns
apps/studio/src-tauri/sidecar/: .gitkeep
apps/studio/src-tauri/src/: lib.rs  main.rs
crates/code-core/: .gitignore  Cargo.toml
crates/code-core/prompts/: complexity_system.md  complexity_user.md  context_compact.md  default_system_prompt.md  goal_check_system.md  goal_check_user.md  goal_extract_system.md  goal_extract_user.md  llm_goal_check_system.md  llm_goal_extract_system.md  llm_plan_system.md  plan_system.md  plan_user.md  structured_output.md  subagent_explore.md  subagent_plan.md  subagent_summary.md  subagent_title.md  title_generate.md
crates/code-core/skills/: builtin-tools.md  find-skills.md
crates/code-core/src/: agent.rs  agent_api.rs  checkpoint.rs  config.rs  context.rs  export.rs  file_history.rs  hitl.rs  lane_integration.rs  lib.rs  llm.rs  memory.rs  permissions.rs  project_memory.rs  prompts.rs  queue.rs  reflection.rs  retry.rs  session.rs  session_lane_queue.rs  store.rs  subagent.rs  telemetry.rs  todo.rs
crates/code-core/src/context_store/: config.rs  digest.rs  embedding.rs  error.rs  ingest.rs  mod.rs  pathway.rs  retrieval.rs  session.rs  telemetry.rs  types.rs
crates/code-core/src/context_store/rerank/: mock.rs  mod.rs
crates/code-core/src/context_store/storage/: local.rs  memory.rs  mod.rs  vector_index.rs
crates/code-core/src/hooks/: engine.rs  events.rs  matcher.rs  mod.rs
crates/code-core/src/lsp/: client.rs  manager.rs  mod.rs  protocol.rs  servers.rs  tools.rs
crates/code-core/src/mcp/: client.rs  manager.rs  mod.rs  protocol.rs  tools.rs
crates/code-core/src/mcp/transport/: mod.rs  stdio.rs
crates/code-core/src/planning/: llm_planner.rs  mod.rs
crates/code-core/src/security/: audit.rs  classifier.rs  config.rs  injection.rs  interceptor.rs  mod.rs  sanitizer.rs  taint.rs
crates/code-core/src/tools/: mod.rs  registry.rs  skill.rs  skill_catalog.rs  skill_discovery.rs  skill_loader.rs  task.rs  types.rs
crates/code-core/src/tools/dynamic/: binary.rs  http.rs  mod.rs  script.rs
crates/code-node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/code-node/src/: lib.rs
crates/code-py/: Cargo.toml  pyproject.toml
crates/code-py/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  privacy.rs  tools.rs
crates/common/src/transport/: codec.rs  frame.rs  mod.rs  tee.rs  unix.rs
crates/cron/: Cargo.toml  README.md
crates/cron/src/: lib.rs  natural.rs  parser.rs  scheduler.rs  store.rs  types.rs
crates/dev/: Cargo.toml
crates/dev/demo/: A3sfile.hcl  gateway.hcl
crates/dev/src/: A3sfile.hcl  brew.rs  code.rs  config.rs  error.rs  graph.rs  health.rs  ipc.rs  kube.rs  lib.rs  log.rs  main.rs  proxy.rs  state.rs  supervisor.rs  ui.html  ui.rs  watcher.rs
crates/dev/src/supervisor/: ipc.rs  mod.rs  spawn.rs
crates/dev/src/templates/python/: requirements.txt
crates/dev/src/templates/typescript/: package.json  tsconfig.json
crates/power/: Cargo.toml
crates/power/src/: config.rs  dirs.rs  error.rs  lib.rs  main.rs
crates/power/src/api/: mod.rs  sse.rs  types.rs
crates/power/src/api/native/: chat.rs  embeddings.rs  (+4 more)
crates/power/src/backend/: llamacpp.rs  mod.rs  types.rs
crates/power/src/cli/: delete.rs  list.rs  mod.rs  pull.rs  run.rs  serve.rs  show.rs
crates/power/src/model/: manifest.rs  mod.rs  pull.rs  registry.rs  storage.rs
crates/power/src/server/: mod.rs  router.rs  state.rs
crates/transport/: Cargo.toml  PLAN.md
crates/transport/src/: codec.rs  frame.rs  lib.rs  unix.rs
crates/updater/: Cargo.toml
crates/updater/src/: component.rs  download.rs  fleet.rs  github.rs  install.rs  lib.rs  platform.rs  systemd.rs
crates/updater/src/fleet/: validation.rs
crates/updater/tests/: fleet_upgrade.rs
(+2134 files in other folders)
