[package]
name = "a3s-event"
version = "0.1.0"
edition = "2021"
authors = ["A3S Lab"]
license = "MIT"
description = "Pluggable event subscription, dispatch, and persistence for the A3S ecosystem"
repository = "https://github.com/A3S-Lab/Event"
documentation = "https://docs.rs/a3s-event"
readme = "README.md"
keywords = ["event", "pubsub", "provider", "persistence", "async"]
categories = ["asynchronous", "network-programming"]

[lib]
name = "a3s_event"
path = "src/lib.rs"

[dependencies]
async-nats = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time"] }
tokio-stream = "0.1"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
time = "0.3"
futures = "0.3"
bytes = "1.5"
aes-gcm = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "publish"
harness = false
