[package]
name = "a3s-code-py"
version = "0.1.0"
edition = "2021"
authors = ["A3S Lab Team"]
license = "MIT"
repository = "https://github.com/A3S-Lab/Code"
description = "A3S Code Python bindings - Native Python module via PyO3"

[lib]
name = "a3s_code"
crate-type = ["cdylib"]

[dependencies]
a3s-code-core = { version = "0.1", path = "../code-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1.35", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
