[package]
name = "a3s-common"
version = "0.1.0"
edition = "2021"
authors = ["A3S Lab"]
license = "MIT"
description = "Shared types for A3S: privacy classification, tool definitions, transport protocol"
repository = "https://github.com/A3S-Lab/a3s"
keywords = ["a3s", "privacy", "tools", "transport"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "io-util", "net"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
