[package]
name = "a3s-cron"
version = "0.1.0"
edition = "2021"
description = "Cron scheduling library for A3S with natural language support"
license = "MIT"
repository = "https://github.com/A3S-Lab/a3s"
keywords = ["a3s", "cron", "scheduler", "task", "natural-language"]
categories = ["asynchronous", "development-tools"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
