[package]
name = "a3s-updater"
version = "0.2.0"
edition = "2021"
authors = ["A3S Lab"]
license = "MIT"
repository = "https://github.com/a3s-lab/a3s"
description = "Self-update library for A3S CLI binaries via GitHub Releases"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
flate2 = "1"
tar = "0.4"
tokio = { version = "1", features = ["fs", "io-util"] }
anyhow = "1"
