[workspace]

[package]
name = "safeclaw-ui"
version = "0.1.0"
edition = "2021"
description = "SafeClaw Desktop UI"
authors = ["A3S Lab Team"]
license = "MIT"

[lib]
name = "safeclaw_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "SafeClaw"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Embedded SafeClaw gateway (in-process server)
safeclaw = { path = "../crates/safeclaw" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dirs = "5"
