[package]
name = "studio-ui"
version = "0.1.0"
edition = "2021"
description = "Studio Desktop UI"
authors = ["A3S Lab Team"]
license = "MIT"

[lib]
name = "studio_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
