[package]
name = "a3s-lambda-core"
version = "0.1.0"
edition = "2021"
description = "Core domain model and contracts for A3S Lambda"
license = "MIT"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
