[package]
name = "a3s-lambda-cli"
version = "0.1.0"
edition = "2021"
description = "a3s CLI - Agent development and runtime CLI"
license = "MIT"

[[bin]]
name = "a3s"
path = "main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1", features = ["fs", "sync", "rt", "rt-multi-thread", "macros", "process", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# HCL parsing with env() function support
hcl-rs = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client (for future API commands)
reqwest = { version = "0.12", features = ["json"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dirs = "5"

# thiserror
thiserror = "2"

# Async trait
async-trait = "0.1"

# Async utilities
futures-util = "0.3"

# Base64 encoding
base64 = "0.22"

# Hostname
hostname = "0.4"

# SQLite for state store (K3s-style embedded database)
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
